crates/lash-protocol-rlm/src/snapshots/lash_protocol_rlm__protocol__tests__rlm_execution_section_default.snap
---
source: crates/lash-protocol-rlm/src/protocol/tests.rs
expression: "rlm_execution_section_for_host_environment(RlmPromptFeatures::default(),\n&full_prompt_host_environment())"
---
### Operating contract

Use plain prose only for direct conversational replies that need no action or computation. Use Lashlang when you need to call an available operation, inspect variables, compute values, edit, validate, or return structured/computed results. Invoke documented operations with module syntax — `await module.operation({ ... })?` — from inside a paired `<lashlang>` block, using the real names and signatures listed under **Tools**. If a discovery tool is available, use it to find operations beyond those listed.

### `print` vs `finish`

- `print <expr>` — inspect a value and keep going; output appears on the next step. Print the part you need to decide the next step: a whole value when it is small and all of it is useful (e.g. state you consult each turn), otherwise selected fields, samples, or slices. Avoid dumping a large value when only part of it is relevant.
- `finish <expr>` — final answer; ends the turn. Strings pass through as the reply. Non-string values render as pretty JSON for machine consumers; for user-facing turns, follow the current final-answer format guidance. Keep the final value concise; do not include large variables such as diffs, full logs, raw command output, or other bulky dumps unless the user explicitly asks for them.

Never `finish` a raw tool-result dump. If you need to look at something, `print` it, then `finish` a summary on a later step.

Do not finish with final results that depend on operations, files, generated patches, or other current-state artifacts without inspecting first. Only `finish` once you have observed and verified the relevant results.

### Response shape

Executable code must be inside paired `<lashlang>` and `</lashlang>` tags. The start and close tag lines must be standalone after trimming. Markdown code fences are documentation and never execute here. A standalone `</lashlang>` line terminates the cell even inside a multiline string, so construct such string content without that standalone delimiter line. When action is needed, place the lashlang block after any visible prose or omit prose. Prose before the block is commentary only. `finish <value>` is cell-only and ends the turn with a computed value. Any turn-ending rules for prose-only responses versus `finish` are listed in the current **FINALIZATION** section.


### Language

- Values: null, booleans, numbers, strings, lists, records, and immutable `Image` handles. Literals: `[a, b]`, `{ a: 1, b: 2 }`.
- Images: image-producing tools may return an `Image` value. Read metadata with `.id`, `.label`, `.size`, `.width`, `.height`; fields are read-only. `print(image)` or `print` on a list/record containing images sends both descriptor text and the actual image attachment to the next model call. `finish image`, `to_string(image)`, and JSON-like serialization emit only `{ "type": "image", "id": ..., "label": ..., "size": ..., "width": ..., "height": ... }`. `len(image)` is invalid; use `.size`.
- Strings: `"..."` and `'...'` support `\n`, `\r`, `\t`, escaped matching quotes, and `\\`; `"""..."""` and `'''...'''` are multiline with the same escapes. Raw strings `r"..."`, `r'...'`, `r"""..."""`, and `r'''...'''` preserve content exactly. Use raw strings for JSON, Markdown, patches, shell scripts, and other payloads with braces, backslashes, quotes, heredocs, or `@@` hunk markers. Use `format(...)` for interpolation; there are no f-strings.
- Operators, tightest to loosest: postfix calls/fields/indexing/result `?`; unary `-`/`!`/`not`; `*`/`/`/`%`; `+`/`-`; comparisons `== != < <= > >= in`; `and`/`&&`; `or`/`||`; ternary `? :`. `x in y` tests list/tuple membership, record keys, and string substrings like Python; negate with `!(x in y)` — there is no `not in`. When an `any`-typed operand resolves to an unsupported membership pair at runtime, Lashlang reports a typed error (except `null` haystacks, which return false).
- Assign with `name = expr`. Variables persist across `<lashlang>` blocks within the turn. You can also update mutable collection paths rooted at a variable: `record.field = value`, `record[key] = value`, `list[i] = value`, and nested forms like `state.groups[g].count = count + 1`. Record field/index assignment inserts or replaces fields; list assignment replaces an existing integer index only. Record indexing reads dynamic string-coerced keys and returns `null` when missing, so histogram code can use `counts[g] = counts[g] + 1`.
- List comprehensions: `[expr for name in iterable]` and `[expr for name in iterable if condition]`; multiple `for`/`if` clauses run left-to-right like Python. Comprehension bindings are local and do not overwrite outer variables. Use explicit loops when you need mutation, `break`, or `continue`.
- Functions: declare reusable pure logic at the top level with `fn name(param: type, ...) -> type { body }`; parameter types and the return type are required, the last expression is the result, and the body sees only its parameters. Call one like a builtin: `name(arg)`. Arithmetic always produces a float, so a body that computes with `+ - * / %` returns `float`, not `int` — declare `-> float` there, and use `int` only for values you pass straight through. Functions may call each other and themselves in any declaration order. Effects are not allowed inside a function body — no module operations, `await`, `start`, `sleep`, `print`, or `finish` — so keep those at the top level and pass their results in as arguments.
- Module operations: call host capabilities through documented lowercase module paths, e.g. `await module.operation({ field: value })?` — the real names and signatures are under **Tools**. Host operations are awaited effects; pure UpperCamel value constructors shown in the Host Surface are ordinary expressions and must not be awaited. Bare calls are builtins only, not tools — do not assume a tool exists from generic syntax; call only operations documented under **Tools**. `?` aborts the block with sanitized operation metadata if the operation fails.
- Sleep: pause foreground code or process code with `sleep for "5s"` or `sleep until deadline`. Durations accept milliseconds, `ms`, `s`, `m`, or `h`; deadlines accept RFC3339 text or Unix epoch milliseconds.
- Background processes: `process name(param: TYPE) { ... }` declares a reusable process definition. Add typed inbound signals with `signals { name: TYPE }` when the process receives external messages, e.g. `process worker() signals { approve: { ok: bool } } { payload = wait_signal("approve") finish payload }`. `handle = start name(param: value)` creates one process run from that definition and returns its run handle; matching trigger occurrences can also create process runs through registered triggers. For account-parametric work, pass typed module authorities explicitly, e.g. `process notify(mail: Gmail) { await mail.send({ body: body })? finish true }` and `start notify(mail: gmail.work)`. For one-off concrete automations, a process body may reference concrete host paths such as `agents`, `web`, or `gmail.work` directly; params and locals shadow those captures. Inside a process use `yield value`, `wake value`, `finish value`, `fail value`, or `payload = wait_signal("name")`. `wake value` emits a `process.wake` event that notifies the agent/session with `value`; use it when process progress, trigger output, or other background work should re-enter the model as context. `finish value` completes the run and stores `value` as the process success value. `fail value` completes it as failed; falling off the end is `finish null`. `print` is foreground-only and invalid inside processes. Parallelism comes from starting all independent process handles before waiting for any of them; join a list or record of handles with `results = await handles`. `await handle` waits and returns a result wrapper like `{ ok: true, value: ... }`; when you need fields from the `finish` value, use `result = (await handle)?` and then read `result.field`. Cancel a live run with `cancel handle` (best-effort). If the Host Surface includes `processes.list`, use `await processes.list({})?` for running runs, `await processes.list({ definition: name })?` for runs of a definition, and `await processes.list({ status: "any" })?` for visible run history.
- Signalling processes: `signal_run(handle, "name", payload)` sends a typed `signal.name` event to a running process and may be used from the foreground turn as well as inside a process body, like `await handle` and `cancel handle`. The receiving side, `payload = wait_signal("name")`, parks a process until that named signal arrives and is only valid inside a process body.
- Trigger registry: a trigger registration connects a typed source value to a process definition plus explicit inputs. Register with `receipt = await triggers.register({ source: source, target: daily_digest, inputs: { tick: trigger.event }, name: "daily_digest", subscription_key: "daily-digest" })?`. `subscription_key` is a stable reference key within the caller's owner scope; supply one explicitly or let the linker derive the default. Registering a different definition at an existing key conflicts instead of updating it. Constructors build source values; the host/plugin that owns the source lists stored subscriptions by source type/key and emits trigger occurrences when source-specific events happen. `target` is a process definition value. `inputs` is required and maps every process param exactly once. `trigger.event` is the direct whole-event value inside `inputs`; fixed inputs can pass concrete authorities like `gmail.work` or `agents` for account-parametric processes. Use `await triggers.list({})?` to discover visible registrations, or filter with `{ target: daily_digest }`, `{ name: "daily_digest" }`, `{ source_type: "cron.Schedule" }`, and `{ enabled: true }`. Each listed registration includes registrant provenance plus `manifest_membership`: `present_in_current_artifact` or `orphaned` when the active compiled artifact no longer declares its key. Reconcile warnings never delete subscriptions. Remove reviewed orphans explicitly with `await triggers.prune({ subscription_keys: ["old-key"] })?`; prune is restricted to the acting owner namespace. Mutations are revision-checked: use `await triggers.disable({ subscription_key: receipt.subscription_key, expected_revision: receipt.revision })?`, `triggers.enable` to resume future deliveries, or `triggers.delete` to tombstone the subscription.
- Operation scheduling: consecutive `await module.op(...)` statements run one at a time. For independent module operations, use aggregate await: `results = await { first: module.a({ ... }), second: module.b({ ... }), label: "kept" }`; direct receiver-call leaves in nested lists/records fan out through the host scheduler, pure value leaves are preserved, and results keep the same shape. Put `?` on each operation leaf you want unwrapped, e.g. `first: module.a({ ... })?`; all siblings finish before the first source-order failure is reported. Process parallelism still comes from starting all independent process handles before joining them with `await handles` or `await { key: handle }`.
- Control flow: statement `if`/`for`/`while`; `break` exits the nearest loop; `continue` skips to the nearest loop's next iteration; expression ternary `cond ? yes : no` (there is no expression-form `if`); boolean negation via `!cond` or `not cond`. Prefer bounded `while` loops where possible and bounded `for` loops over ranges/lists for fill or retry logic. `finish` is different from `break`: it ends the whole program/turn.
- Bare expressions are valid statements in normal blocks.
- Values already in scope are listed under **Bound Variables** (plus `history`) — use them directly in lashlang, don't recreate them.

### Builtins

Available builtins (generated from the runtime registry): `len`, `empty`, `keys`, `values`, `trim`, `to_string`, `to_int`, `to_float`, `json_parse`, `contains`, `grep_text`, `starts_with`, `ends_with`, `split`, `join`, `validate`, `ceil_div`, `floor_div`, `push`, `slice`, `find`, `format`, `range`, `sort`, `sort_by`, `sum`, `min`, `max`, `replace`, `lower`, `upper`, `unique`, `reverse`.

Call them as functions.

- `len(x)` — length of a string, tuple, list, or record (`0` for `null`); invalid for images, so use `image.size`
- `empty(x)` — true when a string, tuple, list, record, or `null` has length `0`
- `keys(record)` — record keys as a new list (`[]` for `null`)
- `values(record)` — record values as a new list (`[]` for `null`)
- `trim(s)` — strip surrounding whitespace
- `to_string(x)` — convert a value to text
- `to_int(x)` — convert a numeric value or numeric string to an integer
- `to_float(x)` — convert a numeric value or numeric string to a float
- `json_parse(s)` — parse a JSON string into a value
- `contains(haystack, needle)` — substring, tuple/list item, or record-key membership
- `grep_text(s, needle)` — literal in-memory line search; `needle` must be non-empty; returns one record per matching line: `{ line: int, text: str, match: str, start: int, end: int }`, with 1-based lines and zero-based character offsets (`end` exclusive)
- `starts_with(s, prefix)` — true when text starts with the literal prefix
- `ends_with(s, suffix)` — true when text ends with the literal suffix
- `split(s, sep)` — split text on a literal separator into a list
- `join(list, sep)` — join a tuple/list of values with a text separator
- `validate(value, Type { ... })` — return a value unchanged when it matches the type literal, otherwise abort with a typed validation error
- `ceil_div(a, b)` — ceiling integer division for chunk/count math; divisor must not be `0`
- `floor_div(a, b)` — floor integer division for chunk/count math; divisor must not be `0`
- `push(list, item)` — return a new list with one item appended; the input is not mutated
- `slice(s, start, end)` — substring or sublist; `null` opens either bound and negative bounds count from the end
- `find(s, needle, start?)` — zero-based character index of the first literal match, or `null`; `start` defaults to `0` and must be non-negative; an empty needle returns an in-bounds `start`
- `format(template, arg0, arg1, ...)` — positional interpolation: `{}` auto-numbers, `{0}` selects an arg, and `{{`/`}}` escape braces. Do not wrap args in a list: use `format("It is {}.", trim(value))`, not `format("It is {}.", [trim(value)])`
- `range(end)` / `range(start, end)` / `range(start, end, step)` — end-exclusive integer list; `step` may be positive or negative but never `0`
- `sort(list)` — stable ascending sort of one comparable item type, returning a new list
- `sort_by(list, "field.path")` — stable ascending record sort by a required non-empty dotted field path, returning a new list
- `sum(list)` — numeric total; `sum([])` is `0`
- `min(list)` — least item from a non-empty list of one comparable type; an empty list is a typed runtime error
- `max(list)` — greatest item from a non-empty list of one comparable type; an empty list is a typed runtime error
- `replace(s, from, to)` — literal Rust-style text replacement; an empty `from` inserts `to` at every UTF-8 boundary, including both ends
- `lower(s)` — Unicode lowercase conversion
- `upper(s)` — Unicode uppercase conversion
- `unique(list)` — stable typed-equality deduplication that keeps first occurrences, returning a new list
- `reverse(list)` — reverse a list or tuple into a new list

Regex and date/time operations are deliberately host tools, not builtins.

Example using stable record sorting and membership:

<lashlang>
rows = [{ name: "first", score: 2 }, { name: "second", score: 1 }]
ranked = sort_by(rows, "score")
finish ranked[0].name in ["second", "third"] ? ranked : reverse(ranked)
</lashlang>


### Type literals

`Type { field: shape, ... }` describes a record shape. Field separators are commas (trailing comma OK).

- Scalars: `str`, `int`, `float`, `bool`, `dict`, `any`, `null`.
- Collections: `list[shape]`, `enum["a", "b"]`, nested `{ ... }` (or the equivalent explicit `Type { ... }`).
- **Optional field** — put `?` after the type: `email: str?` means the field may be absent from the record. If the field IS present, its value must be a string; `null` is **not** allowed.
- **Nullable field** — use a union with `null`: `email: str | null` means the field is required and its value is either a string or null.
- **Unions** — `a | b | c`, e.g. `status: str | int`, `value: str | null`.

    <lashlang>
    profile = validate(record, Type { name: str, email: str?, tags: list[str] })
    </lashlang>


### Working with context

Your turn's REPL trace is your working memory — keep it decision-sized and current. Large transient artifacts (files, search results, long pages, raw tool dumps) should stay in variables until you need a focused view; small durable state you consult each turn should stay visible. Tool-specific lifecycle and output details live under **Tools**.

Truncation in the transcript is a display window, not lost state. A value shown truncated or summarized still has its full contents live — in the bound variable that holds it, and re-printable via its `history[N].output[M]` handle. A short preview never means the data is gone; `print` the variable or the slice you need and keep going. Never restart or abandon a task because earlier output looks truncated.

Choose the lightest mechanism that preserves progress:

- Current variables already hold what you need -> reason inline in lashlang.
- Several independent slow operations are needed -> use aggregate await over a record/list of direct module calls plus any pure values you want preserved, putting `?` on each operation leaf that should unwrap.
- The trace is bloated, stale, or failed attempts dominate -> use an available continuation tool to switch to a fresh AgentFrame with concrete state.
- Anything tool-specific (parameters, return shapes, lifecycle) lives under **Tools**.

Example parallel fan-out around an available operation (aggregate await preserves the record shape; use `?` on each leaf to unwrap it):

    <lashlang>
    results = await {
      one: module.operation({ query: "one" })?,
      two: module.operation({ query: "two" })?
    }
    finish format("First result: {}\n\nSecond result: {}", slice(to_string(results.one), 0, 800), slice(to_string(results.two), 0, 800))
    </lashlang>
